--- a/IS211_12/templates/login.html
+++ b/IS211_12/templates/login.html
@@ -14,7 +14,7 @@
                 <label for="password">Enter your password:</label>
                 <input type="text" id="password" name="password"><br><br>
                 
-                <label for="submit">Add to do item</label>
+                <label for="submit">Login</label>
                 <input type="submit" value="submit">
         </ul>
         
